# langchain-experiments

./: .gitignore  Behaviorism.txt  Cognitivism.txt  README.md  api.py  at_mention_with_voice.ipynb  multi_doc_chat.ipynb  process_website.ipynb  pyproject.toml  youtube_chunks on langchain webinar.ipynb  youtube_chunks.ipynb
langchain_webinar_db/: chroma-collections.parquet  chroma-embeddings.parquet
langchain_webinar_db/index/: id_to_uuid_9cb89161-af41-4599-8365-7c91ea3dcc58.pkl  index_metadata_9cb89161-af41-4599-8365-7c91ea3dcc58.pkl  uuid_to_id_9cb89161-af41-4599-8365-7c91ea3dcc58.pkl
